--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Nate's Landing Page</title>
     </head>
     <body>
-        <script src="rps.js"></script>
+        <script src="game.js"></script>
     </body>
 </html>
