added some singe round logic

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
         <title>Nate's Landing Page</title>
     </head>
     <body>
+        <div class = 'button_group'>
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+        <div class = 'results'>
+            <p id = 'result'></p>
+            <div class = 'playerResults'>
+                <p>Player Score</p>
+                <p id = 'playerCount'>0</p>
+            </div>  
+            <div class = 'cpuResults'
+                <p>Computer Score</p>
+                <p id = 'cpuCount'>0</p>
+            </div> 
+        </div>
         <script src="game.js"></script>
     </body>
 </html>
