--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
     <head>
         <meta charset="utf-8">
         <title>Nate's Landing Page</title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h1>Rock, Paper, Scissors!</h1>
+        <h3>Be the first to 5 to win!</h3>
         <div class = 'button_group'>
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button><img src = "https://thenounproject.com/api/private/icons/477918/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0"></button>
+            <button><img src = "https://thenounproject.com/api/private/icons/477912/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0"</button>
+            <button><img src = "https://thenounproject.com/api/private/icons/477919/edit/?backgroundShape=SQUARE&backgroundShapeColor=%23000000&backgroundShapeOpacity=0&exportSize=752&flipX=false&flipY=false&foregroundColor=%23000000&foregroundOpacity=1&imageFormat=png&rotation=0"</button>
         </div>
         <div class = 'results'>
-            <p id = 'result'></p>
             <div class = 'playerResults'>
-                <p>Player Score</p>
+                <p>Your Score</p>
                 <p id = 'playerCount'>0</p>
             </div>  
-            <div class = 'cpuResults'
+            <div class = 'cpuResults'>
                 <p>Computer Score</p>
                 <p id = 'cpuCount'>0</p>
             </div> 
